--- a/index.html
+++ b/index.html
@@ -1,110 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flowr - The Future of Web Design</title>
-    <link rel="icon" href="favicon.svg" type="image/svg+xml">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Flowr Agentic Builder</title>
+  <script>
+    window.process = {
+      env: {
+        NODE_ENV: 'development'
+      }
+    };
+  </script>
 </head>
 
 <body>
-    <nav class="navbar container">
-        <div class="logo">Flowr</div>
-        <ul class="nav-links">
-            <li><a href="#features">Features</a></li>
-            <li><a href="#templates">Templates</a></li>
-            <li><a href="#pricing">Pricing</a></li>
-            <li><a href="#login">Login</a></li>
-        </ul>
-        <button class="btn btn-primary" style="padding: 0.5rem 1.5rem;">Get Started</button>
-    </nav>
-
-    <section class="hero">
-        <div class="blob blob-1"></div>
-        <div class="blob blob-2"></div>
-
-        <div class="container">
-            <div class="hero-content">
-                <h1>Build Better Websites,<br>Faster Than Ever.</h1>
-                <p>The first AI-powered website builder that understands your vision. Drag, drop, and dream bigger.</p>
-                <button class="btn btn-primary">Start Building Free</button>
-
-                <!-- CSS-only Browser Mockup -->
-                <div
-                    style="margin-top: 4rem; background: rgba(30, 41, 59, 0.5); border-radius: 12px; border: 1px solid rgba(255,255,255,0.1); overflow: hidden; box-shadow: 0 20px 50px rgba(0,0,0,0.5); backdrop-filter: blur(10px);">
-                    <div
-                        style="padding: 1rem; border-bottom: 1px solid rgba(255,255,255,0.05); display: flex; gap: 8px;">
-                        <div style="width: 12px; height: 12px; border-radius: 50%; background: #ef4444;"></div>
-                        <div style="width: 12px; height: 12px; border-radius: 50%; background: #eab308;"></div>
-                        <div style="width: 12px; height: 12px; border-radius: 50%; background: #22c55e;"></div>
-                    </div>
-                    <div
-                        style="padding: 3rem; text-align: left; display: grid; grid-template-columns: 200px 1fr; gap: 2rem;">
-                        <!-- Sidebar Mockup -->
-                        <div style="display: flex; flex-direction: column; gap: 1rem;">
-                            <div
-                                style="height: 40px; background: rgba(255,255,255,0.05); border-radius: 8px; width: 80%;">
-                            </div>
-                            <div
-                                style="height: 40px; background: rgba(255,255,255,0.05); border-radius: 8px; width: 100%;">
-                            </div>
-                            <div
-                                style="height: 40px; background: rgba(255,255,255,0.05); border-radius: 8px; width: 60%;">
-                            </div>
-                        </div>
-                        <!-- Canvas Mockup -->
-                        <div
-                            style="background: rgba(0,0,0,0.2); border-radius: 8px; height: 300px; padding: 2rem; display: flex; flex-direction: column; justify-content: center; align-items: center; border: 2px dashed rgba(255,255,255,0.1);">
-                            <div
-                                style="font-size: 2rem; font-weight: 800; color: rgba(255,255,255,0.2); margin-bottom: 1rem;">
-                                Drop Section Here</div>
-                            <div style="font-size: 3rem; color: var(--accent-primary); opacity: 0.5;"><i
-                                    class="fas fa-plus-circle"></i></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="features" class="features container">
-        <h2 class="section-title">Everything You Need</h2>
-        <p class="section-subtitle">Powerful features designed to help you build professional websites in minutes, not
-            days.</p>
-
-        <div class="feature-grid">
-            <div class="feature-card">
-                <div class="feature-icon"><i class="fas fa-magic"></i></div>
-                <h3>AI Assistant</h3>
-                <p>Describe your dream site in plain English and watch as our AI generates the perfect layout and copy
-                    in seconds.</p>
-            </div>
-            <div class="feature-card">
-                <div class="feature-icon"><i class="fas fa-th-large"></i></div>
-                <h3>Drag & Drop</h3>
-                <p>Intuitive drag and drop interface gives you complete creative control without writing a single line
-                    of code.</p>
-            </div>
-            <div class="feature-card">
-                <div class="feature-icon"><i class="fas fa-rocket"></i></div>
-                <h3>Instant Deploy</h3>
-                <p>One-click publishing to our global edge network ensures your site loads instantly from anywhere in
-                    the world.</p>
-            </div>
-        </div>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 Flowr. All rights reserved.</p>
-    </footer>
-
-    <script src="script.js"></script>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
 </body>
 
 </html>
